# es

./: .clang-format  .clangd  .gitignore  CHANGES  GNUmakefile.in  INSTALL  LICENSE  Makefile.in  README  access.c  applymap.es  arenas.c  benches.es  build.sh  closure.c  complete.es  conf.es  config.h.in  config.mk.in  configure.ac  conv.c  dependencies.mk  development.es  dict.c  dict.es  dirstack.es  doiterator.es  dump.c  dynlib.c  editor.c  editor.h  errmatch.es  es.h  esconfig.h  esdebug  estest  esutil.gdb  eval.c  eval.h  example.esrc  (+90 more)
doc/: builtincols.txt  es.1  es.1.src  hookcols.txt  macroreplace.es  make_es_man_p9.es  make_man.es  make_pdf.es  mathcols.txt  setgetcols.txt
etc/: make_256color_dict.es  xterm_colors.json
examples/: count_files.es  es-mode.el  es.vim  es_ftdetect.vim  make-emacs-builtins.es  square.es
libraries/: 256colors.es  256syntax.es  advanced_hooks.es  advanced_range.es  array.es  async.es  atuin_history.es  autoinit.es  base_completion.es  colors.es  complete_dynlibs.es  complete_git.es  complete_import.es  complete_make.es  cwd.es  dict.es  direnv.es  dirstack.es  dumplist.es  echovar.es  esbug.es  file.es  float.es  format.es  format_array.es  format_dict.es  gencomp_atuin.es  gencomp_autoinit.es  gencomp_conf.es  gencomp_git.es  gencomp_ifconfig_freebsd.es  gencomp_libutil.es  gencomp_pkg.es  gencomp_ssh.es  general_completion.es  history.es  input_glob.es  ip6parse.es  json.es  lc.es  (+21 more)
tests/: libtest_string.es  test_accumulate.es  test_assert.es  test_block.es  test_comparisons.es  test_dict.es  test_do.es  test_dolist.es  test_errmatch.es  test_errors.es  test_esmle.es  test_fail.es  test_for.es  test_frombase.es  test_fromdecimal.es  test_glob.es  test_homebinding.es  test_iterator.es  test_match.es  test_parser.es  test_pipe.es  test_process.es  test_range.es  test_regex.es  test_tobase.es  test_todecimal.es  test_tryoperator.es  test_underscore.es  test_vars.es  test_while.es
